@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2013-12-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/enhance.c (GammaImage): Eliminate a compiler warning.</li>
+<li>coders/png.c (ReadOnePNGImage): Eliminate a compiler warning.</li>
+<li>coders/pcl.c (WritePCLImage): Eliminate a compiler warning.</li>
+</ul>
+</blockquote>
 <p>2013-12-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
